--- a/app/views/shared/_portfolio_header.html.erb
+++ b/app/views/shared/_portfolio_header.html.erb
@@ -6,5 +6,22 @@
       <%= link_to "Find Out More About Me", about_me_path, class: "btn btn-primary" %>
       <%= link_to "My Blogs", blogs_path, class: "btn btn-secondary" %>
     </p>
+    <br>
+    <div class="skills">
+		<% Skill.all.each do |skill| %>
+			<div class="skill">
+			    <h4><%= skill.title %></h4>
+			    <div class="progress">
+				    <div
+				      class="progress-bar progress-bar-striped bg-warning"
+				      role="progressbar"
+				      aria-valuenow="<%= skill.percent_utilized %>"
+				      aria-valuemax="100"
+				      style="width: <%= skill.percent_utilized %>%"
+				    ></div>
+			    </div>
+			</div>
+		<% end %>
+	</div>
   </div>
 </section>
